<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">CageFace</string>
	<string name="greeting">NOT THE BEES!</string>
	<string name="working">Working...</string>
	<string name="take_picture">Take Picture</string>
	<string name="cage_picture">Cage Picture</string>
	<string name="save_picture">Save Picture</string>
	<string name="share_picture">Share Picture</string>

	<string name="big_head_setting">Bigger Heads</string>
	<string name="small_head_setting">Smaller Heads</string>
	<string name="more_heads_setting">More Heads</string>
	<string name="fewer_heads_setting">Fewer Heads</string>
	<string name="reset_setting">Reset Settings</string>

</resources>
