<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:tools="http://schemas.android.com/tools"
	  tools:context=".MainActivity" >
	<item android:id="@+id/action_bigger_heads"
		  android:title="@string/big_head_setting"
		  android:orderInCategory="10"
		  android:showAsAction="never" />
	<item android:id="@+id/action_smaller_heads"
		  android:title="@string/small_head_setting"
		  android:orderInCategory="15"
		  android:showAsAction="never" />
	<item android:id="@+id/action_more_heads"
		  android:title="@string/more_heads_setting"
		  android:orderInCategory="20"
		  android:showAsAction="never" />
	<item android:id="@+id/action_fewer_heads"
		  android:title="@string/fewer_heads_setting"
		  android:orderInCategory="25"
		  android:showAsAction="never" />
	<item android:id="@+id/action_reset"
		  android:title="@string/reset_setting"
		  android:orderInCategory="30"
		  android:showAsAction="never" />
</menu>
