<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".MainActivity$PlaceholderFragment">

	<TextView android:id="@+id/text_area"
			android:textAlignment="center"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/greeting"/>

	<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/take_picture"
			android:onClick="takePicture"/>

	<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/share_picture"
			android:onClick="sharePicture"/>

	<ImageView android:id="@+id/image_area"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"/>

</LinearLayout>
